# usb_sof_dppi

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: nrf54lm20dk_nrf54lm20a_cpuapp.overlay
src/: app_usbd.c  app_usbd.h  main.c
